# asset-marketplace

./: .env  .env.sample  .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json
.nx/workspace-data/: file-map.json  lockfile.hash  parsed-lock-file.json  project-graph.json
nft-marketplace/: README.md  package-lock.json  package.json  tsconfig.base.json
nft-marketplace/anchor/: Anchor.toml  package.json
nft-marketplace/anchor/programs/basic/src/: lib.rs
nft-marketplace/web/app/: layout.tsx
programs/: Anchor.toml  Cargo.toml  README.md  jest.config.ts  package.json  tsconfig.json
programs/migrations/: deploy.ts
programs/nft-marketplace/: Cargo.toml
programs/nft-marketplace/src/: error.rs  instructions.rs  lib.rs  mod.rs  state.rs  utils.rs
programs/tests/: nft_marketplace.spec.ts
web/: config.ts
web/app/: layout.tsx  metadata.ts
web/components/dashboard/: dashboard-feature.tsx
web/components/marketplace/: marketplace-data-access.tsx  marketplace-feature.tsx
web/components/nft/: NftForm.tsx
