[package]
name = "nft_marketplace"
version = "0.1.0"
description = "BARK NFT Marketplace"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_marketplace"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
