[package]
name = "nft_marketplace"
version = "0.1.0"
description = "NFT Marketplace built with Anchor for Solana"
edition = "2021"
rust-version = "0.0.1"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_marketplace"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
solana-program = "2.0.7"
anchor-client = "0.31.1"

# Optional dependencies can be added here if needed
# example-feature = ["crate"]

[target.bpfel-unknown-unknown.dependencies.std]
features = []  # Or specify features as needed